src/test/deca/context/invalid/provided/testi27.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Expecting a class
{
int x;
this.x = x;
}